--- a/style.css
+++ b/style.css
@@ -1,29 +1,63 @@
 body {
-	font-family: Arial, sans-serif;
+	font-family: 'Nunito Sans', sans-serif;
 	background-color: #f7f7f7;
 	margin: 0;
 	padding: 0;
 }
 
 header {
+	font-family: 'Pacifico', cursive;
+	font-size: 130%;
 	background-color: #2ecc71;
-	color: white;
+	color: rgb(240, 255, 240);
 	text-align: center;
+	margin: 0;
 	padding: 20px;
 }
+.btn {
+	background: #3498db;
+	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+	background-image: -o-linear-gradient(top, #3498db, #2980b9);
+	background-image: linear-gradient(to bottom, #3498db, #2980b9);
+	-webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	-webkit-box-shadow: 0px 1px 4px #000000;
+	-moz-box-shadow: 0px 1px 4px #000000;
+	box-shadow: 0px 1px 4px #000000;
+	font-family: Georgia;
+	color: #ffffff;
+	font-size: 17px;
+	padding: 10px 19px 10px 20px;
+	text-decoration: none;
+  }
+  
+  .btn:hover {
+	background: #3cb0fd;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
+  }
 
 h1 {
 	margin: 0;
 }
 
 main {
+	background-color: rgb(240, 255, 240);
+	color: rgb(240, 255, 240);
 	margin: 20px;
 }
 
 #timer {
 	background-color: white;
 	padding: 20px;
-	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.3);
 	text-align: center;
 }
 
@@ -33,6 +67,7 @@ h2 {
 }
 
 #countdown {
+	font-family: "Ubuntu Mono", monospace;
 	font-size: 64px;
 	color: #2980b9;
 	margin: 0;
